--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -3,7 +3,8 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
-  min-height: 890px;
+  min-height: 850px;
+  max-height: 900px;
   color: white;
   display: flex;
   flex-direction: column;
